[project]
name = "adv-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.13.1",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "langchain-text-splitters>=1.1.0",
    "langchainhub>=0.1.21",
    "tiktoken>=0.12.0",
    "transformers>=4.57.3",
    "unstructured[all-docs]>=0.18.21",
]
